fixed CORS preflight request issue, user is able to login and get token